@@ -1,18 +1,18 @@
 package kernbeisser.Windows.PermissionManagement;
 
 import jakarta.persistence.PersistenceException;
+import java.awt.*;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.util.*;
+import java.util.List;
 import java.util.concurrent.CancellationException;
-import java.util.stream.Collectors;
+import javax.swing.*;
 import kernbeisser.CustomComponents.ObjectTable.Column;
 import kernbeisser.CustomComponents.ObjectTable.Columns.Columns;
-import kernbeisser.DBConnection.DBConnection;
 import kernbeisser.DBEntities.Permission;
-import kernbeisser.DBEntities.Permission_;
-import kernbeisser.Enums.PermissionConstants;
+import kernbeisser.Enums.Colors;
 import kernbeisser.Security.PermissionKeyGroups;
 import kernbeisser.Security.PermissionKeys;
 import kernbeisser.Useful.CSV;
@@ -35,32 +35,10 @@ public class PermissionController extends Controller<PermissionView, PermissionM
   })
   public PermissionController() {
     super(new PermissionModel());
+    initialize();
   }
 
-  private Permission lastSelection;
-
-  private void change(Permission permission, PermissionKey key) {
-    // if(LogInModel.getLoggedIn().hasPermission(Key.find(KeyCategory.PERMISSIONS)))
-    if (permission.contains(key)) {
-      if (permission.contains(PermissionKeys.getWriteKey(key))) {
-        model.removeKey(permission, PermissionKeys.getWriteKey(key));
-        model.removeKey(permission, key);
-      } else {
-        model.addKey(permission, PermissionKeys.getWriteKey(key));
-      }
-    } else {
-      model.addKey(permission, key);
-    }
-    loadSolutions();
-  }
-
-  void loadSolutions() {
-    Optional<PermissionKeyGroups> selectedPermissionKerOrdering = getView().getCategory();
-    if (selectedPermissionKerOrdering.isEmpty()) return;
-    List<Permission> permissions =
-        DBConnection.getConditioned(
-            Permission.class, Permission_.name.eq(PermissionConstants.ADMIN.nameId()).not());
-    Collections.reverse(permissions);
+  private void initialize() {
     Column<PermissionKey> nameColumn =
         Columns.create(
             "Schlüssel-Name",
@@ -70,57 +48,30 @@ public class PermissionController extends Controller<PermissionView, PermissionM
                         .replace("_WRITE", "")
                         .replace("_READ", "")
                         .replace("CHANGE_ALL", "Alle Bearbeiten")));
-    ArrayList<Column<PermissionKey>> permissionColumns = new ArrayList<>();
+    List<Column<PermissionKey>> permissionColumns = new ArrayList<>();
     permissionColumns.add(nameColumn);
-    PermissionKeyGroups selected = selectedPermissionKerOrdering.get();
-    Collection<PermissionKey> readPermission = PermissionKeys.find(selected, true, false);
-    Collection<PermissionKey> writePermission = PermissionKeys.find(selected, false, true);
     permissionColumns.addAll(
-        permissions.stream()
-            .map(
-                permission ->
-                    Columns.create(
-                        permission.getNeatName(),
-                        (PermissionKey permissionKey) -> {
-                          if (permissionKey == PermissionKey.CHANGE_ALL) {
-                            boolean read = permission.getKeySet().containsAll(readPermission);
-                            boolean write = permission.getKeySet().containsAll(writePermission);
-                            return read ? write ? "Lesen & schreiben" : "Lesen" : "Keine";
-                          }
-
-                          if (PermissionKeyGroups.isInGroup(
-                              permissionKey, PermissionKeyGroups.ACTIONS)) {
-                            return permission.contains(permissionKey) ? "Ja" : "Nein";
-                          }
-                          boolean read = permission.contains(permissionKey);
-                          boolean write =
-                              permission.contains(PermissionKeys.getWriteKey(permissionKey));
-                          return read ? write ? "Lesen & schreiben" : "Lesen" : "Keine";
-                        },
-                        e -> {
-                          lastSelection = permission;
-                          if (e == PermissionKey.CHANGE_ALL) {
-                            boolean read = permission.getKeySet().containsAll(readPermission);
-                            boolean write = permission.getKeySet().containsAll(writePermission);
-                            if (read) {
-                              if (write) {
-                                model.removeKeys(permission, readPermission);
-                                model.removeKeys(permission, writePermission);
-                              } else model.addKeys(permission, writePermission);
-                            } else model.addKeys(permission, readPermission);
-                          }
-                          change(permission, e);
-                        }))
-            .collect(Collectors.toCollection(ArrayList::new)));
-    List<PermissionKey> values =
-        Arrays.stream(selected.getKeys())
-            .filter(
-                key -> selected == PermissionKeyGroups.ACTIONS || !key.name().endsWith("_WRITE"))
-            .sorted(Comparator.comparing(p -> PermissionKeys.getPermissionHint(p.toString())))
-            .collect(Collectors.toList());
-    if (!selected.equals(PermissionKeyGroups.ACTIONS)) values.addFirst(PermissionKey.CHANGE_ALL);
-    getView().setValues(values);
+        model.readAllPermissions().stream().map(this::createPermissionColumn).toList());
     getView().setColumns(permissionColumns);
+  }
+
+  public Column<PermissionKey> createPermissionColumn(Permission permission) {
+    return Columns.<PermissionKey>create(
+            permission.getNeatName(), (k) -> model.getPermissionLevel(k, permission).getName())
+        .withDoubleClickConsumer(k -> cycleAccess(permission, k))
+        .withTooltip(k -> PermissionKeys.getPermissionHint(k.toString()))
+        .withBgColor(k -> model.isDirty(permission, k) ? Colors.BACKGROUND_DIRTY.getColor() : null);
+  }
+
+  public void loadPermissionGroup() {
+    Optional<PermissionKeyGroups> selectedGroup = getView().getSelectedGroup();
+    if (selectedGroup.isEmpty()) return;
+    List<PermissionKey> groupKeys = model.selectGroup(selectedGroup.get());
+    getView().setValues(groupKeys);
+  }
+
+  private void cycleAccess(Permission permission, PermissionKey key) {
+    getView().getPermission().replace(key, model.cycleAccess(key, permission));
   }
 
   public void addPermission() {
@@ -131,7 +82,8 @@ public class PermissionController extends Controller<PermissionView, PermissionM
     } while (permissionName.isEmpty());
     try {
       model.addPermission(permissionName);
-      loadSolutions();
+      initialize();
+      loadPermissionGroup();
     } catch (PersistenceException e) {
       getView().nameIsNotUnique();
       addPermission();
@@ -140,18 +92,43 @@ public class PermissionController extends Controller<PermissionView, PermissionM
 
   public void deletePermission() {
     Permission permission = null;
+    String permissionName = "";
     try {
       permission = getView().inputAskForPermission(model.getAllPermissions());
+      permissionName = permission.getName();
       model.deletePermission(permission);
-      loadSolutions();
+      initialize();
+      loadPermissionGroup();
       getView().successfulDeleted();
     } catch (CancellationException ignored) {
     } catch (PersistenceException e) {
       if (getView().permissionIsInUse()) {
         model.removeUserFromPermission(permission);
-        loadSolutions();
+        initialize();
+        loadPermissionGroup();
         getView().successfulDeleted();
       }
+    }
+  }
+
+  public void saveChanges() {
+    model.persistChanges(model.dirtyPermissionKeys());
+  }
+
+  public void close() {
+    PermissionView view = getView();
+    Map<Permission, Map<PermissionKey, AccessLevel>> dirtyPermissionKeys =
+        model.dirtyPermissionKeys();
+    if (dirtyPermissionKeys.isEmpty()) {
+      view.back();
+    } else {
+      switch (view.confirmCloseOnDirty()) {
+        case JOptionPane.CANCEL_OPTION -> {
+          return;
+        }
+        case JOptionPane.YES_OPTION -> model.persistChanges(dirtyPermissionKeys);
+      }
+      view.back();
     }
   }
 
@@ -163,14 +140,15 @@ public class PermissionController extends Controller<PermissionView, PermissionM
   @Override
   public void fillView(PermissionView permissionView) {
     getView().setCategories(model.getAllKeyCategories());
-    loadSolutions();
+    loadPermissionGroup();
   }
 
   public boolean importFrom(File selectedFile) throws FileNotFoundException {
     if (!PermissionRepresentation.putInDB(selectedFile)) {
       return false;
     }
-    loadSolutions();
+    initialize();
+    loadPermissionGroup();
     return true;
   }
 
